# polynomial

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  Makefile.old  README.md  build.sh  gnuplot.txt  horner.h  jacobi_roots.gp  madsen_reid.f95  polynomial.h  polynomial.tcc  rational_polynomial.h  roots.gp  solution.h  solver_low_degree.h  solver_low_degree.tcc  static_polynomial.h  test_bairstow.cpp  test_bairstow.txt  test_horner.cpp  test_jacobi_roots.cpp  test_jacobi_roots.txt  test_jenkins_traub.cpp  test_jenkins_traub.txt  test_laguerre_step.cpp  test_madsen_reid.cpp  test_polynomial.cpp  test_polynomial.txt  test_polynomial_root.cpp  test_quadratic_step.cpp  test_rational_polynomial.cpp  test_solution.cpp  test_solvers.cpp  test_solvers.txt  test_static_polynomial.cpp
docs/html/: annotated.html  annotated_dup.js  classSolverMadsenReid-members.html  classSolverMadsenReid.html  classSolverMadsenReid.js  class____gnu__cxx_1_1__Polynomial-members.html  class____gnu__cxx_1_1__Polynomial.html  class____gnu__cxx_1_1__Polynomial.js  class____gnu__cxx_1_1__RationalPolynomial-members.html  class____gnu__cxx_1_1__RationalPolynomial.html  class____gnu__cxx_1_1__RationalPolynomial.js  class____gnu__cxx_1_1__StaticPolynomial-members.html  class____gnu__cxx_1_1__StaticPolynomial.html  class____gnu__cxx_1_1__StaticPolynomial.js  classemsr_1_1BairstowSolver-members.html  classemsr_1_1BairstowSolver.html  classemsr_1_1BairstowSolver.js  classemsr_1_1JenkinsTraubSolver-members.html  classemsr_1_1JenkinsTraubSolver.html  classemsr_1_1JenkinsTraubSolver.js  classemsr_1_1JenkinsTraubSolver_3_01std_1_1complex_3_01Real_01_4_01_4-members.html  classemsr_1_1JenkinsTraubSolver_3_01std_1_1complex_3_01Real_01_4_01_4.html  classemsr_1_1JenkinsTraubSolver_3_01std_1_1complex_3_01Real_01_4_01_4.js  classemsr_1_1LaguerreSolver-members.html  classemsr_1_1LaguerreSolver.html  classemsr_1_1LaguerreSolver.js  classemsr_1_1Polynomial-members.html  classemsr_1_1Polynomial.html  classemsr_1_1Polynomial.js  classemsr_1_1QuadraticSolver-members.html  classemsr_1_1QuadraticSolver.html  classemsr_1_1QuadraticSolver.js  classemsr_1_1RationalPolynomial-members.html  classemsr_1_1RationalPolynomial.html  classemsr_1_1RationalPolynomial.js  classemsr_1_1StaticPolynomial-members.html  classemsr_1_1StaticPolynomial.html  classemsr_1_1StaticPolynomial.js  classes.html  classstd_1_1complex.html  (+344 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+52 more)
docs/latex/: annotated.tex  classSolverMadsenReid.tex  class____gnu__cxx_1_1__Polynomial.tex  class____gnu__cxx_1_1__RationalPolynomial.tex  class____gnu__cxx_1_1__StaticPolynomial.tex  classemsr_1_1BairstowSolver.tex  classemsr_1_1JenkinsTraubSolver.tex  classemsr_1_1JenkinsTraubSolver_3_01std_1_1complex_3_01Real_01_4_01_4.tex  classemsr_1_1LaguerreSolver.tex  classemsr_1_1Polynomial.tex  classemsr_1_1QuadraticSolver.tex  classemsr_1_1RationalPolynomial.tex  classemsr_1_1StaticPolynomial.tex  classstd_1_1complex.tex  dir_106756a8ee71bdde7f7b779a3a0a52e4.tex  dir_a1a854be586b511af52e991b434140ee.tex  files.tex  hierarchy.tex  horner_8h.tex  horner_8h__incl.md5  namespace____gnu__cxx.tex  namespaceemsr.tex  namespaces.tex  namespacestd.tex  notsospecfun_8h.tex  notsospecfun_8h__dep__incl.md5  notsospecfun_8h__incl.md5  polynomial_8h.tex  polynomial_8h__dep__incl.md5  polynomial_8h__incl.md5  polynomial_8tcc.tex  polynomial_8tcc__dep__incl.md5  polynomial_8tcc__incl.md5  rational__polynomial_8h.tex  rational__polynomial_8h__incl.md5  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  (+85 more)
ext/: horner.h  polynomial.h  polynomial.tcc  rational_polynomial.h  solution.h  solver_bairstow.tcc  solver_jenkins_traub.h  solver_low_degree.h  solver_low_degree.tcc  static_polynomial.h
include/emsr/: horner.h  notsospecfun.h  polynomial.h  polynomial.tcc  rational_polynomial.h  solution.h  solver_bairstow.h  solver_bairstow.tcc  solver_jenkins_traub.h  solver_jenkins_traub.tcc  solver_jenkins_traub_complex.tcc  solver_laguerre.h  solver_laguerre.tcc  solver_low_degree.h  solver_low_degree.tcc  solver_madsen_reid.h  solver_quadratic.h  solver_quadratic.tcc  static_polynomial.h  static_polynomial.tcc
include/ext/: horner.h  notsospecfun.h  polynomial.h  polynomial.tcc  rational_polynomial.h  solution.h  solver_bairstow.h  solver_bairstow.tcc  solver_jenkins_traub.h  solver_jenkins_traub.tcc  solver_jenkins_traub_complex.tcc  solver_laguerre.h  solver_laguerre.tcc  solver_low_degree.h  solver_low_degree.tcc  solver_madsen_reid.h  solver_madsen_reid.tcc  solver_quadratic.h  solver_quadratic.tcc  static_polynomial.h  static_polynomial.tcc
output/: gnuplot.txt  test_horner.txt  test_jacobi_roots.txt  test_laguerre_step.txt  test_polynomial.txt
scripts/: build.sh
test/input/: complex_solver1.in  complex_solver2.in  madsen_reid1.in  madsen_reid2.in  madsen_reid_bug.in  test_madsen_reid_1.in  test_madsen_reid_2.in  test_madsen_reid_3.in  test_madsen_reid_4.in  test_madsen_reid_5.in  test_madsen_reid_6.in  test_madsen_reid_7.in  test_madsen_reid_8.in  test_madsen_reid_9.in  test_solver9.in
test/output/: madsen_reid_bug.txt  test_jenkins_traub.txt  test_quadratic_step.txt
test/src/: test_bairstow.cpp  test_derivative_integral.cpp  test_horner.cpp  test_jacobi_roots.cpp  test_jenkins_traub.cpp  test_jenkins_traub_complex.cpp  test_laguerre_step.cpp  test_madsen_reid.cpp  test_polynomial.cpp  test_polynomial_root.cpp  test_quadratic_step.cpp  test_rational_polynomial.cpp  test_shift.cpp  test_solution.cpp  test_solvers.cpp  test_static_polynomial.cpp
test_output/: test_bairstow.prev  test_bairstow.txt  test_jacobi_roots.txt  test_jenkins_traub.txt  test_laguerre_step.txt  test_quadratic_step.txt  test_solvers.txt  test_static_polynomial.txt
